--- a/package.json
+++ b/package.json
@@ -35,7 +35,12 @@
         "typescriptExplicitTypes.enableImportAction": {
           "type": "boolean",
           "default": true,
-          "description": "Show action that automatically import the generated type if it's missing"
+          "description": "Show action that automatically import the generated type if it's missing."
+        },
+        "typescriptExplicitTypes.formatAfterGeneration": {
+          "type": "boolean",
+          "default": true,
+          "description": "Run document format action after a type has been generated."
         }
       }
     }
@@ -44,15 +49,22 @@
     "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
     "lint": "eslint . --ext .ts,.tsx",
-    "watch": "tsc -watch -p ./"
+    "watch": "tsc -watch -p ./",
+    "pretest": "npm run compile",
+    "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
+    "@types/glob": "^7.1.3",
+    "@types/mocha": "^8.0.3",
     "@types/node": "^12.12.0",
     "@types/vscode": "^1.34.0",
     "@typescript-eslint/eslint-plugin": "^3.0.2",
     "@typescript-eslint/parser": "^3.0.2",
     "eslint": "^7.1.0",
-    "typescript": "^4.0.2"
+    "glob": "^7.1.6",
+    "mocha": "^8.1.3",
+    "typescript": "^4.0.2",
+    "vscode-test": "^1.4.0"
   },
   "dependencies": {}
 }
