--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "typescript-explicit-types",
   "displayName": "TypeScript Explicit Types",
   "description": "Generate explicit type annotation from inferred type in TypeScript",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "icon": "logo.png",
   "publisher": "nick-lvov-dev",
   "repository": "https://github.com/nick-lvov-dev/typescript-explicit-types",
@@ -57,6 +57,7 @@
   },
   "devDependencies": {
     "@types/glob": "^7.1.3",
+    "@types/lodash": "^4.14.161",
     "@types/mocha": "^8.0.3",
     "@types/node": "^12.12.0",
     "@types/vscode": "^1.34.0",
@@ -68,5 +69,7 @@
     "typescript": "^4.0.2",
     "vscode-test": "^1.4.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "lodash": "^4.17.20"
+  }
 }
