--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
     }
   },
   "scripts": {
-    "vscode:prepublish": "npm run compile",
+    "vscode:prepublish": "webpack --mode production",
+    "webpack": "webpack --mode development",
+    "webpack-dev": "webpack --mode development --watch",
     "compile": "tsc -p ./",
     "lint": "eslint . --ext .ts,.tsx",
     "watch": "tsc -watch -p ./",
@@ -57,7 +59,7 @@
   },
   "devDependencies": {
     "@types/glob": "^7.1.3",
-    "@types/lodash": "^4.14.161",
+    "@types/lodash.uniqwith": "^4.5.6",
     "@types/mocha": "^8.0.3",
     "@types/node": "^12.12.0",
     "@types/vscode": "^1.34.0",
@@ -66,10 +68,13 @@
     "eslint": "^7.9.0",
     "glob": "^7.1.6",
     "mocha": "^8.1.3",
+    "ts-loader": "^8.0.4",
     "typescript": "^4.0.2",
-    "vscode-test": "^1.4.0"
+    "vscode-test": "^1.4.0",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12"
   },
   "dependencies": {
-    "lodash": "^4.17.20"
+    "lodash.uniqwith": "^4.5.0"
   }
 }
