add required module 'nan'

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "typescript-explicit-types",
   "displayName": "TypeScript Explicit Types",
   "description": "Generate explicit type annotation from inferred type in TypeScript",
-  "version": "0.0.9",
+  "version": "0.0.10",
   "icon": "logo.png",
   "publisher": "nick-lvov-dev",
   "repository": "https://github.com/nick-lvov-dev/typescript-explicit-types",
@@ -63,6 +63,7 @@
     "eslint": "^7.9.0",
     "glob": "^7.1.6",
     "mocha": "^8.1.3",
+    "nan": "^2.15.0",
     "ts-loader": "^8.0.4",
     "typescript": "^4.0.2",
     "vscode-test": "^1.4.0",
